[package]
name = "combeen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { version = "0.5.0", features = ["dynamic"] }
bevy = { version = "0.6.0", features = ["dynamic"] }
serde = "1"

[[example]]
name = "tiles"
path = "examples/maps/tiles.rs"

[[example]]
name = "keyboard"
path = "examples/input/keyboard.rs"

[[example]]
name = "move_camera"
path = "examples/camera/move_camera.rs"
